--- a/tegel/src/components/dropdown-v2/sdds-dropdown-vars.scss
+++ b/tegel/src/components/dropdown-v2/sdds-dropdown-vars.scss
@@ -1,9 +1,11 @@
 .sdds-mode-light {
   --sdds-dropdown-bg: var(--sdds-grey-50);
-  --sdds-dropdown-border-bottom: var(--sdds-grey-800);
+  --sdds-dropdown-border-bottom: var(--sdds-grey-600);
+  --sdds-dropdown-border-bottom-hover: var(--sdds-grey-800);
   --sdds-dropdown-border-bottom-open: var(--sdds-blue-400);
   --sdds-dropdown-value-color: var(--sdds-grey-868);
   --sdds-dropdown-label-color: var(--sdds-grey-958);
+  --sdds-dropdown-label-inside-color: var(--sdds-grey-700);
   --sdds-dropdown-helper-color: var(--sdds-grey-700);
   --sdds-dropdown-placeholder-color: var(--sdds-grey-700);
   --sdds-dropdown-disabled-color: var(--sdds-grey-400);
@@ -20,9 +22,11 @@
 .sdds-mode-dark {
   --sdds-dropdown-bg: var(--sdds-grey-868);
   --sdds-dropdown-border-bottom: var(--sdds-grey-600);
+  --sdds-dropdown-border-bottom-hover: var(--sdds-grey-400);
   --sdds-dropdown-border-bottom-open: var(--sdds-blue-400);
   --sdds-dropdown-value-color: var(--sdds-white);
   --sdds-dropdown-label-color: var(--sdds-grey-400);
+  --sdds-dropdown-label-inside-color: var(--sdds-grey-400);
   --sdds-dropdown-helper-color: var(--sdds-grey-500);
   --sdds-dropdown-placeholder-color: var(--sdds-grey-400);
   --sdds-dropdown-disabled-color: var(--sdds-grey-800);
